[package]
name = "css-in-rs-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jan-Mirko Otter"]
description = "Core macro for css-in-rs"
repository = "https://github.com/mirkootter/css-in-rs"

[lib]
proc-macro = true

[dependencies]
nom = "7.1.3"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"

[dev-dependencies]
css-in-rs = { version = "0.1.0", path = "../css-in-rs" }
