[package]
name = "css-in-rs"
version = "0.1.2"
authors = ["Jan-Mirko Otter"]
edition = "2021"
license = "MIT"
description = "Library to manage component-level CSS in Rust"
repository = "https://github.com/mirkootter/css-in-rs"
keywords = ["css", "dioxus", "jss", "wasm", "gui"]
readme = "../README.md"

[features]
default = []

[dependencies]
css-in-rs-macro = { version = "0.1.2", path = "../css-in-rs-macro" }
dioxus = { version = "0.4.3", optional = true }
gloo-console = "0.3.0"
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["Document"] }

[dev-dependencies]
dioxus-web = "0.4.3"
