[package]
name = "css-in-rs-demo"
version = "0.1.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css-in-rs = { version = "0.1.3", path = "../css-in-rs", features = ["dioxus"] }
dioxus = "0.4.3"
dioxus-web = "0.4.3"
gloo-console = "0.3.0"
js-sys = "0.3.67"
web-sys = "0.3.67"
